fix alignment of heading sin define

--- a/static/css/page/define.scss
+++ b/static/css/page/define.scss
@@ -2,7 +2,8 @@
     padding-top: 2em;
 
     h1, h2 {
-        text-align: center;
+        width: 70%;
+        float: right;
     }
 
     .source {
